--- a/gql-folders/package.json
+++ b/gql-folders/package.json
@@ -2,7 +2,7 @@
   "name": "gql-folder-cli",
   "version": "1.0.4",
   "description": "Create a clean folder structure based on a GraphQL schema",
-  "main": "index.js",
+  "main": "cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
