--- a/create-react-api-service/package.json
+++ b/create-react-api-service/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-react-api-service",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Creates a bunch of useful and clean custom hooks for data fetching",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "create-react-api-service": "./index.js"
   },
   "dependencies": {
-    "minimist": "^1.2.6"
+    "minimist": "^1.2.6",
+    "prompts": "^2.4.2"
   }
 }
