--- a/gql-folders/package.json
+++ b/gql-folders/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gql-folder-cli",
-  "version": "1.0.5",
-  "description": "Create a clean folder structure based on a GraphQL schema",
+  "version": "1.0.6",
+  "description": "Create a clean resolver folder structure based on a GraphQL schema",
   "main": "cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
