added json as input and json schema validation

--- a/create-react-api-service/package.json
+++ b/create-react-api-service/package.json
@@ -15,6 +15,7 @@
     "create-react-api-service": "./index.js"
   },
   "dependencies": {
+    "jsonschema": "^1.4.1",
     "minimist": "^1.2.6"
   }
 }
